# pas

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  _shared.css  analysis-index.html  analysis_workflow.md  create_workflow.md  index.html  index.md  md-browser.js  md-index.json  md.html  overview.html  patch_workflow.md  project_analysis_workflow.md  readme.md
derived/gamecore-zone/: CMakeLists.txt  PROJECT.md  session_log.md
derived/gamecore-zone/data/: actions.json
derived/gamecore-zone/docs/superpowers/plans/: 2026-06-03-gamecore-zone-refactor-ss.md  2026-06-03-gamecore-zone-refactor.md  2026-06-07-action-and-turn-scheduler-ss.md  2026-06-07-action-and-turn-scheduler.md
derived/gamecore-zone/docs/superpowers/specs/: 2026-06-03-gamecore-zone-design-ss.md  2026-06-03-gamecore-zone-design.md  2026-06-03-turn-loop-sketch.cpp  2026-06-07-action-and-turn-scheduler-design-ss.md  2026-06-07-action-and-turn-scheduler-design.md  turn-loop-example.cpp
derived/gamecore-zone/godot_zone/: map_view.gd  project.godot  smoke_test.gd  verify.gd  zone.gdextension
derived/gamecore-zone/src/core/: .gitkeep  version.cpp  version.h
derived/gamecore-zone/src/core/components/: actor_component.h  combat_stats_component.h  energy_component.h  health_component.h  hero_component.h  item_component.h  npc_ai_component.h  ongoing_action_component.h  player_controlled_component.h  spatial_component.h  world_state_component.h
derived/gamecore-zone/src/core/ecs/: entity_manager.cpp  entity_manager.h  system_ctx.h
derived/gamecore-zone/src/core/maps/: map_data.h  map_gen.cpp  map_gen.h  tile.h
derived/gamecore-zone/src/core/serialize/: all_components.h  entt_cereal_archive.h  save_load.h  save_store.h
derived/gamecore-zone/src/core/systems/: fov_system.cpp  fov_system.h  npc_ai_system.cpp  npc_ai_system.h
derived/gamecore-zone/src/core/turn/: action.h  action_def.cpp  action_def.h  action_effects.h  energy_channel_scheduler.cpp  energy_channel_scheduler.h  (+14 more)
derived/gamecore-zone/src/gbind/: register_types.cpp  register_types.h  zone_core_gd.cpp  zone_core_gd.h  zone_world_gd.cpp  zone_world_gd.h
derived/gamecore-zone/tests/: CMakeLists.txt
derived/gamecore-zone/tests/src/: main.cpp  smoke_test.cpp  test_ecs.cpp  test_npc_brain.cpp  test_npc_combat.cpp  test_phase4.cpp  test_serialize.cpp  test_turn_scheduler.cpp  test_zone_effects.cpp
derived/hymera/: CLAUDE.md  PROJECT.md  README.md  progress.md  pyproject.toml  session_log.md
derived/hymera/docs/: 01_architecture.md  02_ast_shape.md  03_traverser_and_passes.md  04_emit_interface.md  05_syntax_macros.md  06_cpp_extensions.md  07_examples.md
derived/hymera/docs/decisions/: 0001-clos-style-method-combination.md  0002-implement-quoty.md  0003-implement-proxy-nodes.md  0004-reader-sugar-and-arr-asymmetry.md
derived/hymera/src/hymera/: __init__.hy  __init__.py  cli.hy  generic.hy  traverser.hy
derived/hymera/tests/: README.md
derived/opennefia-cpp/: CLAUDE.md  CMakeLists.txt  PROJECT.md  session_log.md
derived/opennefia-cpp/data/: README.md  game_prototypes.yaml  test_prototypes.yaml
derived/opennefia-cpp/data/locale/: zh-TW.yaml
derived/opennefia-cpp/docs/: 01_core_architecture.md  02_subsystem_mapping.md  03_roadmap.md
derived/opennefia-cpp/docs/decisions/: 01_entity_identification.md  README.md
derived/opennefia-cpp/godot_test/: map_view.gd  map_view.tscn  opennefia.gdextension  project.godot  smoke_test.gd  verify.gd
derived/opennefia-cpp/src/core/: version.cpp  version.h
derived/opennefia-cpp/src/gbind/: opennefia_core_gd.cpp  opennefia_core_gd.h  opennefia_world_gd.cpp  opennefia_world_gd.h  register_types.cpp  register_types.h
derived/opennefia-cpp/tests/: .gitkeep  CMakeLists.txt
derived/opennefia-cpp/tests/src/: smoke_test.cpp  test_cvar.cpp  test_ecs.cpp  test_locale.cpp  test_npc_combat.cpp  test_phase4.cpp  test_prototypes.cpp  test_serialize.cpp
others/ai_core/: CLAUDE.md  README.md  other.md  overview.html  progress.md  pyproject.toml  roadmap.md  thinking.md  thinking_core_nature.md  thinking_layers.md  thinking_oop.md  thinking_pending.md  thinking_production.md  thinking_rma.md  thinking_routing.md  thinking_sfc.md  thinking_state.md
others/ai_core/core_nature/: axis_spec.md  cli_spec.md  composite_spec.md  data_format.md  execution_forms.md  lib_spec.md  overview.md  terminal_model.md
others/ai_core/docs/: ARCHITECTURE.md  OPEN_QUESTIONS.md
others/ai_core/docs/architectures/: 01_overview.md  02_protocol.md  03_entry_manager.md  04_hub.md  05_author_sfc.md  06_project.md  07_agents.md  08_changelog.md  index.md
others/ai_core/funcs/: echo.sh
others/ai_core/html/: _shared.css  architecture.html  decisions.html  index.html  milestones.html  status.html  target.html  vision.html
others/ai_core/src/ai_core/: __init__.py  _core.py
others/ai_core/tests/: test_core.py
others/ai_core/try_implement/: DECISIONS.md  README.md  chain_demo.json  lib_smoke_test.py  routes.json  smoke_test.py  switch.json
others/ai_core/try_implement/demos/: call_chain_trace.py  reliable_code_qa.py  resumable_batch.py
others/ai_core/try_implement/docs/: llm_taming_framework.md  multi_function_interaction.md
others/ai_core/try_implement/funcs/: c_linter.sh  py_linter.sh  reverse.py  upper.py
others/ai_core/try_implement/lib/: __init__.py  call.py  compose.py  compose_meta.py  interact.py  llm_call.py  memoize.py  recovery.py  server.py  singleton.py  state_dirs.py  trace.py
others/ai_core/try_implement/store/: functions.json  index.json
others/ai_core/try_implement/tools/: _common.py  chain.py  hub.py  indexer.py  llm_entry_manager.py  meta_core.py  router.py  sfc.py  switch.py
others/gamecore/turnmap_cpp/: CMakeLists.txt  README.md
others/gamecore/turnmap_cpp/src/: game.cpp  main.cpp  pathfinding.cpp  tilemap.cpp
others/rl_cpp/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  progress.md
others/rl_cpp/demos/: bandit_demo.cpp
others/rl_cpp/include/rl/: bandit.hpp  bandit_agents.hpp  rng.hpp
others/rl_cpp/src/: bandit.cpp  bandit_agents.cpp
others/rl_cpp/tests/: main.cpp
(+1717 files in other folders)
