[project]
name = "hymera"
version = "0.1.0"
description = "Hy 寫的 c-mera 風格 C/C++ 程式碼生成器"
requires-python = ">=3.11"
dependencies = ["hy>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=8", "hyrule>=1.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Hy 原始碼 (.hy) 要被打包；setuptools 預設只收 .py，故顯式納入。
package-data = { "hymera" = ["*.hy", "**/*.hy"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
