[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-core"
version = "0.1.0"
description = "register() + --metadata 攔截 library，供函式宣告自身 metadata"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_core"]
